frame/support/test/tests/construct_runtime_ui/invalid_token_after_name.stderr
error: expected `:`
 --> $DIR/invalid_token_after_name.rs:9:10
  |
9 |         system ?
  |                ^
